# job-applications

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml
.github/workflows/: cloud-scrape.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/jam/: __init__.py  config.py  database.py  models.py  schemas.py
backend/jam/api/: auth.py  deps.py  main.py  middleware.py
backend/jam/api/routers/: admin.py  applications.py  auth.py  dashboard.py  health.py  integrations.py  jobs.py  metrics.py  resume_builder.py  scrape_control.py  users.py  visitors.py
backend/jam/enrichment/: claude_haiku.py  experience.py
backend/jam/monitoring/: health.py  metrics.py  sentry.py
backend/jam/scraper/: base.py  error_taxonomy.py  fingerprint.py  pipeline.py  rate_limiter.py  session.py
backend/jam/scraper/ats/: ashby.py  direct_apis.py  greenhouse.py  lever.py  linkedin_apify.py  serpapi_jobs.py  theirstack_jobs.py
backend/jam/seeds/: company_seeds.json  loader.py
backend/jam/tasks/: beat_schedule.py  celery_app.py  cleanup_tasks.py  enrich_tasks.py  health_tasks.py  notify_tasks.py  scrape_tasks.py  weekly_review_tasks.py
backend/tests/: conftest.py
backend/tests/test_api/: test_applications.py  test_health.py
backend/tests/test_enrichment/: test_experience_regex.py
backend/tests/test_scraper/: test_error_taxonomy.py  test_fingerprint.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: applications.ts  auth.ts  client.ts  jobs.ts  sse.ts  visitors.ts
frontend/src/context/: ViewModeContext.tsx
frontend/src/hooks/: useApplications.ts  useJobs.ts  useKeyboard.ts  useSSE.ts
frontend/src/pages/: AdminPage.tsx  AppliedPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ResumeBuilderPage.tsx  ResumePage.tsx  SupportPage.tsx  WeeklyPage.tsx
frontend/src/store/: jobStore.ts  (+5 more)
infra/nginx/: jam.conf
infra/prometheus/: prometheus.yml
scripts/: backfill_fingerprints.py  check_ats_health.py  seed_db.py
(+26 files in other folders)
