[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jam"
version = "0.1.0"
description = "Job Application Manager — production-grade aggregation and tracking"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",  # alembic sync driver

    # Validation & settings
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",

    # Task queue
    "celery[redis]>=5.4",
    "celery-redbeat>=2.2",   # distributed beat scheduler
    "flower>=2.0",           # celery monitoring UI

    # Async HTTP
    "aiohttp>=3.11",
    "aiohttp-retry>=2.9",

    # Dynamic scraping
    "scrapling>=0.2",

    # AI / enrichment
    "anthropic>=0.40",

    # Caching / rate limiting
    "redis[hiredis]>=5.2",

    # Observability
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi,celery]>=2.18",
    "structlog>=24.4",

    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",  # required by OAuth2PasswordBearer form parsing

    # Utilities
    "orjson>=3.10",
    "httpx>=0.27",           # healthcheck HTTP calls
    "tenacity>=9.0",         # retry logic
    "python-dateutil>=2.9",
    "babel>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",           # async test client
    "ruff>=0.8",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "respx>=0.21",           # mock aiohttp in tests
]

[tool.hatch.build.targets.wheel]
packages = ["jam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in function defaults

[tool.ruff.lint.isort]
known-first-party = ["jam"]
